2004-01-31  Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:
	* configure.in:
	* muine.spec.in:
	* src/About.cs:

	Release 0.3.1.

2004-01-31  Jorn Baayen  <jorn@nl.linux.org>

	* src/Song.cs:

	Fix SearchKey calculation. Bug pointed out by Lee Willis.

2004-01-31  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:
	* TODO:
	* src/DashboardFrontend.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:

	Add a dashboard frontend.

2004-01-31  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Small optimization.

2004-01-31  Jorn Baayen  <jorn@nl.linux.org>

	* src/Song.cs:

	Add {F,f}older.jpg to cover image detection code.

2004-01-30  Jorn Baayen  <jorn@nl.linux.org>

	* configure.in:
	* po/ChangeLog:
	* po/fr.po:

	Added a French translation by Vincent Carriere.
	
	* libmuine/pointer-list-model.c: (pointer_list_model_get_index_of):
	* libmuine/pointer-list-model.h:
	* libmuine/pointer-list-view.c: (pointer_list_view_get_index_of):
	* libmuine/pointer-list-view.h:
	* src/HandleView.cs:

	Add GetIndexOf.

2004-01-30  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* src/PlaylistWindow.cs:

	Select playing song when deiconifying window.

2004-01-30  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* libmuine/pointer-list-view.c: (pointer_list_view_add_column),
	(pointer_list_view_select):
	* libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Expand text column in treeviews, select playing row when changing
	playing song except when changing due to an EOS event.

2004-01-29  Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:

	Updated for upcoming 0.3.1 release.
	
	* src/PlaylistWindow.cs:

	De-iconify window when tray icon is clicked.

2004-01-29  Jorn Baayen  <jorn@nl.linux.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Remove awkward DefaultButton hack.

2004-01-29  Jorn Baayen  <jorn@nl.linux.org>

	* data/muine.schemas.in:
