@@ -32,7 +32,7 @@ AC_SUBST(MUINE_CFLAGS)
 AC_SUBST(MUINE_LIBS)
 
 PKG_CHECK_MODULES(GTKSHARP,
-		  mono = $MONO_REQUIRED \
+		  mono >= $MONO_REQUIRED \
 		  gtk-sharp >= $GTKSHARP_REQUIRED)
 
 dnl Handle GConf
